# firebase-dart

./: BUILD.gn  README.md
android/mojo/src/main/java/com/google/firebase/mojo/: FirebaseImpl.java
ios/: firebase_impl.mm
lib/apk/: config.yaml
lib/src/: firebase.dart
lib/src/flutter/: app.dart  auth.dart  data_snapshot.dart  database.dart  firebase.dart
lib/src/mojo/: auth_response.dart
src/: firebase_impl.h  firebase_impl.mm
